--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,8 @@
 
 body {
   font-family: "Fira Sans", sans-serif;
+  max-width: 1440px;
+  margin-inline: auto;
 }
 
 /* NAVBAR */
@@ -33,8 +35,7 @@ body {
 }
 
 .navbar__logo {
-  margin-left: 10px;
-  list-style-type: none;
+  padding: 11px 0;
 }
 
 .navbar__menu {
@@ -68,10 +69,9 @@ body {
 }
 
 /* HEADER */
-
 .header {
   height: 700px;
-  padding: 0 15px 0 15px;
+  padding: 0 15px;
   background-color: var(--bg-color-lightgray);
   color: var(--darkgray);
   font-size: 1.5rem;
@@ -149,9 +149,7 @@ body {
   column-gap: 20px;
   row-gap: 50px;
   width: 80%;
-  margin-inline: auto;
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin: 100px auto;
   font-size: 2rem;
   text-align: center;
 }
@@ -188,9 +186,7 @@ body {
 
 .main__card-img {
   width: 40%;
-  height: auto;
-  margin-top: auto;
-  margin-bottom: auto;
+  margin: auto 0;
 }
 
 .main__card-price {
@@ -220,7 +216,7 @@ body {
 
 /* FOOTER */
 .footer {
-  background-image: url(footer_map_bg.png);
+  background-image: url(assets/footer_map_bg.png);
   height: 556px;
   font-size: 1.5rem;
   display: flex;
@@ -230,8 +226,7 @@ body {
 
 .footer__container {
   background-color: var(--white);
-  width: 30%;
-  min-width: 300px;
+  width: max(30%, 300px);
   height: 80%;
   margin-right: 220px;
   padding: 30px;
@@ -294,6 +289,21 @@ body {
 }
 
 /* MEDIA QUERIES */
+@media screen and (max-width: 1200px) {
+  .footer__container {
+    width: 80%;
+    margin-inline: auto;
+  }
+
+  .footer__header {
+    font-size: 2.25rem;
+  }
+
+  .footer__subheader {
+    font-size: 1.125rem;
+  }
+}
+
 @media screen and (max-width: 900px) {
   .header__description {
     font-size: 0.75rem;
@@ -439,16 +449,7 @@ body {
   }
 
   .footer__container {
-    width: 90%;
-    margin-inline: auto;
-  }
-
-  .footer__header {
-    font-size: 2.25rem;
-  }
-
-  .footer__subheader {
-    font-size: 1.125rem;
+    width: 95%;
   }
 }
 
@@ -465,10 +466,6 @@ body {
 
 /* MEDIA QUERY MOBILE */
 @media screen and (max-width: 375px) {
-  body {
-    max-width: 375px;
-  }
-
   .header {
     font-size: 1rem;
     height: 600px;
@@ -486,5 +483,10 @@ body {
 
   .footer {
     justify-content: center;
+  }
+
+  .footer__container {
+    width: 90%;
+    margin-inline: auto;
   }
 }
