--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
   --lightgray: #ebebeb;
   --bg-color-darkgray: #343332;
   --card-big-color: #ffffff99;
-} 
+}
 
 body {
   font-family: "Fira Sans", sans-serif;
@@ -24,7 +24,7 @@ body {
   margin-inline: auto;
 }
 
-/* NAVBAR */
+/* NAVBAR WITH NESTING */
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -33,43 +33,144 @@ body {
   list-style-type: none;
   font-size: 0.75rem;
   padding: 20px;
+
+  .navbar__logo {
+    padding: 11px 0;
+  }
+
+  .navbar__menu {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    gap: 50px;
+  }
+
+  .navbar__list-item {
+    text-transform: uppercase;
+    font-weight: 500;
+    color: var(--text-color-lightgray);
+  }
+
+  .navbar__list-item--selected {
+    color: var(--darkgray);
+  }
+
+  .navbar__button {
+    font-family: inherit;
+    font-weight: 500;
+    text-transform: uppercase;
+    border-radius: 3px;
+    border: 1px solid var(--black);
+    padding: 11px 33px;
+  }
+
+  .navbar__hamburger-menu {
+    display: none;
+  }
+
+  @media screen and (max-width: 900px) {
+    .navbar__menu,
+    .navbar__button {
+      display: none;
+    }
+
+    /* HAMBURGER MENU + ANIMATION */
+    .navbar__hamburger-menu {
+      display: block;
+      position: relative;
+      z-index: 1;
+      user-select: none;
+    }
+
+    .navbar__hamburger-menu-checkbox {
+      display: block;
+      width: 40px;
+      height: 32px;
+      position: absolute;
+      left: -5px;
+      cursor: pointer;
+      opacity: 0;
+      z-index: 2;
+    }
+
+    .navbar__hamburger-menu-line {
+      display: block;
+      width: 33px;
+      height: 4px;
+      margin-bottom: 5px;
+      position: relative;
+      background: var(--darkgray);
+      border-radius: 3px;
+      z-index: 1;
+      transform-origin: 4px 0px;
+      transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+        background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+    }
+
+    .navbar__hamburger-menu-line--first {
+      transform-origin: 0% 0%;
+    }
+
+    .navbar__hamburger-menu-line--second {
+      transform-origin: 0% 100%;
+    }
+
+    .navbar__hamburger-menu-checkbox:checked ~ span {
+      opacity: 1;
+      transform: rotate(45deg) translate(-1px, -4px);
+      background: var(--darkgray);
+    }
+
+    .navbar__hamburger-menu-checkbox:checked ~ span:nth-last-child(3) {
+      opacity: 0;
+      transform: rotate(0deg) scale(0.2, 0.2);
+    }
+
+    .navbar__hamburger-menu-checkbox:checked ~ span:nth-last-child(2) {
+      transform: rotate(-45deg) translate(0, -1px);
+    }
+
+    .navbar__hamburger-menu-list {
+      display: none;
+      position: absolute;
+      z-index: 1;
+      width: 100px;
+      right: 100%;
+      margin: 0px 0 0 0px;
+      padding: 10px;
+      background: var(--bg-color-darkgray);
+      list-style-type: none;
+      -webkit-font-smoothing: antialiased;
+      transform-origin: 0% 0%;
+      transform: translate(100%, 0);
+      transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    }
+
+    .navbar__hamburger-menu-list-item {
+      padding: 10px 0;
+      font-size: 1rem;
+      display: flex;
+      border-bottom: 1px solid var(--card-big-color);
+      text-decoration: none;
+      color: var(--white);
+      transition: color 0.3s ease;
+    }
+
+    .navbar__hamburger-menu-list-item a:link,
+    .navbar__hamburger-menu-list-item a:visited {
+      background-color: var(--bg-color-darkgray);
+      color: var(--card-big-color);
+      text-decoration: none;
+    }
+
+    .navbar__hamburger-menu-checkbox:checked ~ .navbar__hamburger-menu-list {
+      display: block;
+      transform: none;
+    }
+  }
 }
 
-.navbar__logo {
-  padding: 11px 0;
-}
-
-.navbar__menu {
-  display: flex;
-  justify-content: center;
-  list-style-type: none;
-  gap: 50px;
-}
-
-.navbar__list-item {
-  text-transform: uppercase;
-  font-weight: 500;
-  color: var(--text-color-lightgray);
-}
-
-.navbar__list-item--selected {
-  color: var(--darkgray);
-}
-
-.navbar__button {
-  font-family: inherit;
-  font-weight: 500;
-  text-transform: uppercase;
-  border-radius: 3px;
-  border: 1px solid var(--black);
-  padding: 11px 33px;
-}
-
-.navbar__hamburger-menu {
-  display: none;
-}
-
-/* HEADER */
+/* HEADER WITH NESTING */
 .header {
   height: 700px;
   padding: 0 15px;
@@ -82,41 +183,82 @@ body {
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
+
+  .header__title {
+    margin-top: 90px;
+    font-weight: 700;
+  }
+
+  .header__description {
+    width: 40%;
+    font-size: 1rem;
+    line-height: 24px;
+    color: var(--darkgray-opacity);
+  }
+
+  .header__button-container {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+  }
+
+  .header__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 7px 0;
+    gap: 15px;
+    width: 134px;
+    background-color: var(--darkgray);
+    color: var(--white);
+    border-radius: 6px;
+    border-style: none;
+    font-family: inherit;
+  }
+
+  @media screen and (max-width: 900px) {
+    .header__description {
+      font-size: 0.75rem;
+      line-height: 18px;
+      min-width: 60%;
+    }
+
+    .header__button-container {
+      gap: 15px;
+    }
+
+    .header__img {
+      min-width: 40%;
+      max-width: 80%;
+    }
+  }
+
+  @media screen and (min-width: 376px) and (max-width: 749px) {
+    .header {
+      font-size: 1rem;
+    }
+  }
+
+  /* MEDIA QUERY MOBILE */
+  @media screen and (max-width: 375px) {
+    .header {
+      font-size: 1rem;
+      height: 600px;
+    }
+
+    .header__description {
+      font-size: 0.75rem;
+      line-height: 18px;
+      width: 75%;
+    }
+
+    .header__button-container {
+      gap: 15px;
+    }
+  }
 }
 
-.header__title {
-  margin-top: 90px;
-  font-weight: 700;
-}
-
-.header__description {
-  width: 40%;
-  font-size: 1rem;
-  line-height: 24px;
-  color: var(--darkgray-opacity);
-}
-
-.header__button-container {
-  display: flex;
-  justify-content: center;
-  gap: 30px;
-}
-
-.header__button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 7px 0;
-  gap: 15px;
-  width: 134px;
-  background-color: var(--darkgray);
-  color: var(--white);
-  border-radius: 6px;
-  border-style: none;
-  font-family: inherit;
-}
-
-/* ANIMATION */
+/* PHONE ANIMATION */
 .header__img {
   min-width: 25%;
   animation-name: header-image;
@@ -143,7 +285,7 @@ body {
   }
 }
 
-/* MAIN */
+/* MAIN WITH NESTING AND MEDIA QUERY */
 .main {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -153,281 +295,68 @@ body {
   margin: 100px auto;
   font-size: 2rem;
   text-align: center;
-}
 
-.main__header {
-  grid-column: span 4;
-}
-
-.main__small-card {
-  background-color: var(--lightgray);
-  min-height: 383px;
-  gap: 15px;
-  padding: 15px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.main__big-card {
-  grid-column: span 2;
-  background-color: var(--bg-color-darkgray);
-  min-height: 349px;
-  gap: 15px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.main__card-header {
-  font-size: 1.375rem;
-}
-
-.main__card-img {
-  width: 40%;
-  margin: auto 0;
-}
-
-.main__card-price {
-  font-size: 1rem;
-  color: var(--black-opacity);
-}
-
-.main__big-card-header {
-  color: var(--white);
-  text-transform: uppercase;
-}
-
-.main__card-text {
-  color: var(--card-big-color);
-  font-size: 1.125rem;
-}
-
-.main__card-button {
-  background-color: var(--bg-color-darkgray);
-  color: var(--card-big-color);
-  font-family: inherit;
-  text-transform: uppercase;
-  border-radius: 3px;
-  border: 1px solid var(--card-big-color);
-  padding: 11px 33px;
-}
-
-/* FOOTER */
-.footer {
-  background-image: url(assets/footer_map_bg.png);
-  height: 556px;
-  font-size: 1.5rem;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.footer__container {
-  background-color: var(--white);
-  width: max(30%, 300px);
-  height: 80%;
-  margin-right: 220px;
-  padding: 30px;
-  border-radius: 3px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.footer__header {
-  font-weight: 700;
-}
-
-.footer__subheader {
-  font-size: 1.375rem;
-  color: var(--darkgray-opacity);
-}
-
-.footer__text {
-  color: var(--gray-opacity);
-  font-weight: 500;
-  font-size: 0.875rem;
-}
-
-.footer__form {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  height: 70%;
-}
-
-.footer__input {
-  height: 25px;
-  border-style: none;
-  background-color: var(--lightgray);
-}
-
-.footer__input,
-.footer__textarea {
-  width: 100%;
-}
-
-.footer__input,
-.footer__textarea,
-.footer__submit {
-  padding: 5px;
-  border-radius: 3px;
-  border: 1px solid var(--lightgray);
-  color: var(--darkgray-opacity);
-  font-family: inherit;
-  font-size: 0.75rem;
-}
-
-.footer__textarea {
-  resize: none;
-}
-
-.footer__submit {
-  background-color: var(--darkgray-opacity);
-  color: var(--white);
-  align-self: center;
-  width: 50%;
-  padding: 10px;
-  border-style: none;
-}
-
-/* MEDIA QUERIES */
-@media screen and (max-width: 1200px) {
-  .footer__container {
-    width: 80%;
-    margin-inline: auto;
+  .main__header {
+    grid-column: span 4;
   }
 
-  .footer__header {
-    font-size: 2.25rem;
+  .main__small-card {
+    background-color: var(--lightgray);
+    min-height: 383px;
+    gap: 15px;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
   }
 
-  .footer__subheader {
+  .main__big-card {
+    grid-column: span 2;
+    background-color: var(--bg-color-darkgray);
+    min-height: 349px;
+    gap: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .main__card-header {
+    font-size: 1.375rem;
+  }
+
+  .main__card-img {
+    width: 40%;
+    margin: auto 0;
+  }
+
+  .main__card-price {
+    font-size: 1rem;
+    color: var(--black-opacity);
+  }
+
+  .main__big-card-header {
+    color: var(--white);
+    text-transform: uppercase;
+  }
+
+  .main__card-text {
+    color: var(--card-big-color);
     font-size: 1.125rem;
   }
-}
 
-@media screen and (max-width: 900px) {
-  .header__description {
-    font-size: 0.75rem;
-    line-height: 18px;
-    min-width: 60%;
-  }
-
-  .header__button-container {
-    gap: 15px;
-  }
-
-  .header__img {
-    min-width: 40%;
-    max-width: 80%;
-  }
-
-  .navbar__menu,
-  .navbar__button {
-    display: none;
-  }
-
-  /* HAMBURGER MENU + ANIMATION */
-  .navbar__hamburger-menu {
-    display: block;
-    position: relative;
-    z-index: 1;
-    user-select: none;
-  }
-
-  .navbar__hamburger-menu-checkbox {
-    display: block;
-    width: 40px;
-    height: 32px;
-    position: absolute;
-    left: -5px;
-    cursor: pointer;
-    opacity: 0;
-    z-index: 2;
-  }
-
-  .navbar__hamburger-menu-line {
-    display: block;
-    width: 33px;
-    height: 4px;
-    margin-bottom: 5px;
-    position: relative;
-    background: var(--darkgray);
-    border-radius: 3px;
-    z-index: 1;
-    transform-origin: 4px 0px;
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
-      background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
-  }
-
-  .navbar__hamburger-menu-line--first {
-    transform-origin: 0% 0%;
-  }
-
-  .navbar__hamburger-menu-line--second {
-    transform-origin: 0% 100%;
-  }
-
-  .navbar__hamburger-menu-checkbox:checked ~ span {
-    opacity: 1;
-    transform: rotate(45deg) translate(-1px, -4px);
-    background: var(--darkgray);
-  }
-
-  .navbar__hamburger-menu-checkbox:checked ~ span:nth-last-child(3) {
-    opacity: 0;
-    transform: rotate(0deg) scale(0.2, 0.2);
-  }
-
-  .navbar__hamburger-menu-checkbox:checked ~ span:nth-last-child(2) {
-    transform: rotate(-45deg) translate(0, -1px);
-  }
-
-  .navbar__hamburger-menu-list {
-    display: none;
-    position: absolute;
-    z-index: 1;
-    width: 100px;
-    right: 100%;
-    margin: 0px 0 0 0px;
-    padding: 10px;
-    background: var(--bg-color-darkgray);
-    list-style-type: none;
-    -webkit-font-smoothing: antialiased;
-    transform-origin: 0% 0%;
-    transform: translate(100%, 0);
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-  }
-
-  .navbar__hamburger-menu-list-item {
-    padding: 10px 0;
-    font-size: 1rem;
-    display: flex;
-    border-bottom: 1px solid var(--card-big-color);
-    text-decoration: none;
-    color: var(--white);
-    transition: color 0.3s ease;
-  }
-
-  .navbar__hamburger-menu-list-item a:link,
-  .navbar__hamburger-menu-list-item a:visited {
+  .main__card-button {
     background-color: var(--bg-color-darkgray);
     color: var(--card-big-color);
-    text-decoration: none;
+    font-family: inherit;
+    text-transform: uppercase;
+    border-radius: 3px;
+    border: 1px solid var(--card-big-color);
+    padding: 11px 33px;
   }
 
-  .navbar__hamburger-menu-checkbox:checked ~ .navbar__hamburger-menu-list {
-    display: block;
-    transform: none;
-  }
-  /* END OF HAMBURGER MENU */
-
-  .main {
+  @media screen and (max-width: 900px) {
     display: grid;
     column-gap: 15px;
     row-gap: 20px;
@@ -435,63 +364,134 @@ body {
     margin-top: 50px;
     margin-bottom: 100px;
     text-align: center;
+
+    .main__small-card {
+      grid-column: span 2;
+      width: 100%;
+      min-height: 238px;
+      gap: 0px;
+    }
+
+    .main__big-card {
+      grid-column: span 4;
+      min-height: 216px;
+    }
+
+    .main__big-card-header {
+      font-size: 2.25rem;
+    }
+  }
+}
+
+/* FOOTER WITH NESTING AND MEDIA QUERIES */
+.footer {
+  background-image: url(assets/footer_map_bg.png);
+  height: 556px;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  .footer__container {
+    background-color: var(--white);
+    width: max(30%, 300px);
+    height: 80%;
+    margin-right: 220px;
+    padding: 30px;
+    border-radius: 3px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
-  .main__small-card {
-    grid-column: span 2;
+  .footer__header {
+    font-weight: 700;
+  }
+
+  .footer__subheader {
+    font-size: 1.375rem;
+    color: var(--darkgray-opacity);
+  }
+
+  .footer__text {
+    color: var(--gray-opacity);
+    font-weight: 500;
+    font-size: 0.875rem;
+  }
+
+  .footer__form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 70%;
+  }
+
+  .footer__input {
+    height: 25px;
+    border-style: none;
+    background-color: var(--lightgray);
+  }
+
+  .footer__input,
+  .footer__textarea {
     width: 100%;
-    min-height: 238px;
-    gap: 0px;
   }
 
-  .main__big-card {
-    grid-column: span 4;
-    min-height: 216px;
-  }
-
-  .main__big-card-header {
-    font-size: 2.25rem;
-  }
-
-  .footer__container {
-    width: 95%;
-  }
-}
-
-/* MEDIA QUERY BREAKPOINT */
-@media screen and (min-width: 376px) and (max-width: 749px) {
-  .header {
-    font-size: 1rem;
-  }
-
-  .footer {
-    justify-content: center;
-  }
-}
-
-/* MEDIA QUERY MOBILE */
-@media screen and (max-width: 375px) {
-  .header {
-    font-size: 1rem;
-    height: 600px;
-  }
-
-  .header__description {
+  .footer__input,
+  .footer__textarea,
+  .footer__submit {
+    padding: 5px;
+    border-radius: 3px;
+    border: 1px solid var(--lightgray);
+    color: var(--darkgray-opacity);
+    font-family: inherit;
     font-size: 0.75rem;
-    line-height: 18px;
-    width: 75%;
   }
 
-  .header__button-container {
-    gap: 15px;
+  .footer__textarea {
+    resize: none;
   }
 
-  .footer {
-    justify-content: center;
+  .footer__submit {
+    background-color: var(--darkgray-opacity);
+    color: var(--white);
+    align-self: center;
+    width: 50%;
+    padding: 10px;
+    border-style: none;
   }
 
-  .footer__container {
-    width: 90%;
-    margin-inline: auto;
+  @media screen and (max-width: 1200px) {
+    .footer__container {
+      width: 80%;
+      margin-inline: auto;
+    }
+
+    .footer__header {
+      font-size: 2.25rem;
+    }
+
+    .footer__subheader {
+      font-size: 1.125rem;
+    }
+  }
+
+  @media screen and (max-width: 900px) {
+    .footer__container {
+      width: 95%;
+      margin-inline: auto;
+    }
+  }
+  @media screen and (min-width: 376px) and (max-width: 749px) {
+    .footer {
+      justify-content: center;
+    }
+  }
+
+  @media screen and (max-width: 375px) {
+    .footer__container {
+      width: 90%;
+    }
   }
 }
