--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ body {
       display: none;
     }
 
-    /* HAMBURGER MENU + ANIMATION */
+    /* HAMBURGER MENU */
     .navbar__hamburger-menu {
       display: block;
       position: relative;
